# cs4290

./: .gitignore  README.md
Project1/: Arya_report.md
Project1/Project1_C/: CMakeLists.txt
Project1/Project1_C/config/: basic.conf
Project1/Project1_C/src/: cache.c  cache.h  cachesim_driver.c
Project1/Project1_CPP/src/: cache.cpp  cache.hpp
Project2/: report.md
Project2/src/: branchsim.cpp  branchsim.h  gshare.h  perceptron.h  yeh_patt.h
Project3/: procsim.cpp
Project4/project4/: sim_trace
Project4/project4/protocols/: MESI_protocol.cpp  MESI_protocol.h  MOESIF_protocol.cpp  MOESIF_protocol.h  MOESI_protocol.cpp  MOESI_protocol.h  MOSI_protocol.cpp  MOSI_protocol.h  MSI_protocol.cpp  MSI_protocol.h
